k8s/apps/airflow/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-dashboard
  namespace: airflow
spec:
  type: ClusterIP
  selector:
    app: airflow-dashboard
  ports:
  - port: 3000
    targetPort: 3000
